# AnaText

./: .buildinfo  .bumpversion.cfg  LICENSE.md  MANIFEST.in  README.md  README_template.md  build_docs.sh  code_documentation.html  genindex.html  howtos.html  index.html  licenses.html  licenses_table.html  objects.inv  project_overview.html  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg
.dvc/: config
.github/workflows/: ci.yml
_sources/: code_documentation.md.txt  licenses_table.rst.txt
_sources/api/: modules.rst.txt
api/: eta.html  modules.html
data/main/: coverage.xml
docs/: conf.py  howtos.rst  index.rst  project_overview.md
docs/api/: eta.rst
howtos/: setup_dev_env.html
src/eta/: ApproxClustNum.py  BasicFunc.py  Classifier.py  DefineDevice.py  KeywordDetect.py  OutputPrintFunc.py  PipelineFunc.py  PlotFunc.py  SCCLBert.py  __init__.py  cpu.env  main.py  mps.env
src/eta/env_files/: cpu.env  cuda.env  mps.env
src/eta/src/: ApproxClustNum.py  BasicFunc.py  Classifier.py  DefineDevice.py  KeywordDetect.py  PipelineFunc.py  dvcGetData.py  main.py
tests/: 20_newsgroup_text_only_50.csv  data.dvc  dataset_preparation.ipynb  test_eta.py
