[metadata]
name = AnaText
# do not change version by hand: use bump_version.sh
version = file: src/eta/VERSION
description = "project"
author = Roman Neronov
author_email = roman.nieronov@gmail.com
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    python-dotenv>=0.5.1
    dvc==3.36.0
    keybert==0.8.3
    langdetect==1.0.9
    matplotlib==3.8.2
    numpy==1.26.2
    pandas==2.1.4
    python-dotenv==1.0.0
    scikit_learn==1.3.2
    seaborn==0.13.0
    sentence_transformers==2.2.2
    setuptools==68.0.0
    stop_words==2018.7.23
    torch==2.1.2
    umap-learn==0.5.4

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
